[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/block_select.png" type="Texture" id=1]
[ext_resource path="res://tilesets/GroundTiles.tres" type="TileSet" id=2]
[ext_resource path="res://scripts/WorldGen.gd" type="Script" id=3]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Selector.gd" type="Script" id=5]
[ext_resource path="res://assets/bg/surface.png" type="Texture" id=7]
[ext_resource path="res://scripts/UI.gd" type="Script" id=8]
[ext_resource path="res://assets/ui/health_under.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/health_progress.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/mana_progress.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/mana_under.png" type="Texture" id=12]

[node name="Main" type="Node2D"]

[node name="SurfaceBG" type="ParallaxBackground" parent="."]

[node name="BG" type="ParallaxLayer" parent="SurfaceBG"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1024, 838 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="SurfaceBG/BG"]
texture = ExtResource( 7 )
region_rect = Rect2( -34.321, 254.703, 1106, 335 )

[node name="World" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
collision_layer = 8
collision_mask = 119
format = 1
tile_data = PoolIntArray( -3276726, 3, 0 )
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="GenLevel" type="Button" parent="UI"]
margin_left = 799.0
margin_top = 477.0
margin_right = 940.0
margin_bottom = 521.0
focus_mode = 0
text = "Generate New Level"

[node name="TempHealth" type="Label" parent="UI"]
margin_left = 749.0
margin_top = 8.0
margin_right = 856.0
margin_bottom = 22.0
text = "0"
align = 1

[node name="TempMana" type="Label" parent="UI"]
margin_left = 911.0
margin_top = 10.0
margin_right = 948.0
margin_bottom = 24.0
text = "0"
align = 1

[node name="HealthBar" type="TextureProgress" parent="UI"]
margin_left = 743.0
margin_top = 23.0
margin_right = 861.0
margin_bottom = 45.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )

[node name="ManaBar" type="TextureProgress" parent="UI"]
margin_left = 918.0
margin_top = 24.0
margin_right = 940.0
margin_bottom = 282.0
max_value = 200.0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 11 )
fill_mode = 2

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 462, -293 )

[node name="Selector" type="Sprite" parent="Player"]
position = Vector2( -462, 293 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.55, 0.55 )
editor_draw_limits = true

[connection signal="pressed" from="UI/GenLevel" to="World" method="_on_GenLevel_pressed"]
[connection signal="pressed" from="UI/GenLevel" to="Player" method="_on_GenLevel_pressed"]
[connection signal="mine" from="Player" to="World" method="_on_Player_mine"]
[connection signal="place" from="Player" to="World" method="_on_Player_place"]
[connection signal="update_stats" from="Player" to="UI" method="_on_Player_update_stats"]
